test: migrate to jest - work in progress
Fixes #238

Signed-off-by: Peter Somogyvari <peter.somogyvari@accenture.com>

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "webpack:prod": "lerna run webpack:prod",
     "webpack:prod:web": "lerna run webpack:prod:web",
     "webpack:prod:node": "lerna run webpack:prod:node",
+    "jest": "jest",
     "test:all": "tap --ts --jobs=1 --node-arg=--max-old-space-size=4096 --timeout=3600 --branches=45 --functions=70 --lines=75 --statements=75 \"packages/cactus-*/src/test/typescript/{unit,integration,benchmark}/\"",
     "test:unit": "tap --ts --node-arg=--max-old-space-size=4096 --timeout=600 --no-check-coverage \"packages/cactus-*/src/test/typescript/unit/\"",
     "test:benchmark": "tap --ts --jobs=1 --no-timeout --no-check-coverage \"packages/cactus-*/src/test/typescript/benchmark/\"",
@@ -76,6 +77,7 @@
     "@openapitools/openapi-generator-cli": "2.3.3",
     "@types/fs-extra": "9.0.11",
     "@types/jasminewd2": "2.0.10",
+    "@types/jest": "26.0.23",
     "@types/node-fetch": "2.5.4",
     "@types/tape": "4.13.0",
     "@types/tape-promise": "4.0.1",
@@ -101,6 +103,8 @@
     "globby": "10.0.2",
     "husky": "4.2.5",
     "inquirer": "8.1.1",
+    "jest": "27.0.6",
+    "jest-extended": "0.11.5",
     "json5": "2.2.0",
     "karma": "6.3.2",
     "karma-chrome-launcher": "3.1.0",
@@ -121,6 +125,7 @@
     "tap": "15.0.9",
     "tape": "5.0.1",
     "tape-promise": "4.0.0",
+    "ts-jest": "27.0.3",
     "ts-loader": "6.2.1",
     "ts-node": "10.1.0",
     "typescript": "4.2.4",
