--- a/packages/cactus-plugin-blockchain-migrator/package.json
+++ b/packages/cactus-plugin-blockchain-migrator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Osprey",
+  "name": "Osprey migrator",
   "version": "1.0.0",
   "description": "Allow end to end smart contract migration between heterogeneous blockchains",
   "main": "dist/lib/main/typescript/index.js",
@@ -29,51 +29,51 @@
       "url": "https://github.com/theliso"
     }
   ],
+  "engines": {
+    "node": ">=10",
+    "npm": ">=6"
+  },
   "license": "ISC",
   "homepage": "https://github.com/theliso/smart_contract_migration#readme",
   "dependencies": {
+    "@grpc/grpc-js": "^1.3.7",
+    "@hyperledger/cactus-cmd-api-server": "^0.8.0",
+    "@hyperledger/cactus-common": "^0.8.0",
+    "@hyperledger/cactus-core": "^0.8.0",
+    "@hyperledger/cactus-core-api": "^0.8.0",
+    "@hyperledger/cactus-plugin-keychain-memory": "^0.8.0",
+    "@hyperledger/cactus-plugin-ledger-connector-besu": "^0.8.0",
+    "@hyperledger/cactus-plugin-ledger-connector-fabric": "^0.8.0",
+    "@hyperledger/cactus-test-tooling": "^0.8.0",
+    "@mapbox/node-pre-gyp": "^1.0.5",
     "acorn": "^8.1.1",
-    "express": "^4.16.3",
+    "axios": "^0.21.1",
+    "bl": "^5.0.0",
+    "crypto-js": "^4.0.0",
+    "dockerode": "^3.3.0",
+    "express": "^4.17.1",
     "fs": "^0.0.1-security",
-    "node": "^10.10.0",
+    "openapi-types": "^7.0.1",
     "parse-filepath": "^1.0.2",
-    "protobufjs": "^6.8.8",
+    "prom-client": "^13.1.0",
     "readline-sync": "^1.4.9",
+    "rxjs": "^6.6.7",
+    "secp256k1": "^4.0.2",
+    "socket.io-client": "^4.0.1",
     "solidity-parser-antlr": "^0.2.15",
-    "@fidm/x509": "1.2.1",
-    "@hyperledger/cactus-common": "0.6.0",
-    "@hyperledger/cactus-core": "0.6.0",
-    "@hyperledger/cactus-core-api": "0.6.0",
-    "axios": "0.21.1",
-    "bl": "1.2.3",
-    "fabric-ca-client": "2.2.8",
-    "fabric-common": "2.2.8",
-    "fabric-network": "2.2.8",
-    "fabric-protos": "2.2.8",
-    "form-data": "3.0.0",
-    "http-status-codes": "2.1.4",
-    "multer": "1.4.2",
-    "ngo": "2.6.2",
-    "node-ssh": "11.0.0",
-    "openapi-types": "7.0.1",
-    "prom-client": "13.0.0",
-    "temp": "0.9.4",
-    "typescript-optional": "2.0.1",
-    "uuid": "8.3.0"
+    "tape": "^5.2.2",
+    "ts-node": "^8.9.1",
+    "typescript-optional": "^2.0.1",
+    "web3": "^1.2.7",
+    "web3-utils": "^1.2.7"
   },
   "devDependencies": {
-    "@types/node": "^14.14.35",
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0",
-    "typescript": "^4.2.3",
-    "@hyperledger/cactus-plugin-keychain-memory": "0.6.0",
-    "@hyperledger/cactus-test-tooling": "0.6.0",
-    "@types/express": "4.17.8",
-    "@types/fs-extra": "9.0.11",
-    "@types/multer": "1.4.4",
-    "@types/temp": "0.8.34",
-    "@types/uuid": "8.3.0",
-    "fs-extra": "9.1.0",
-    "hardhat": "^2.6.1"
+    "@types/crypto-js": "^4.0.1",
+    "@types/express": "^4.17.8",
+    "@types/tape": "^4.13.0",
+    "@types/tape-promise": "^4.0.1",
+    "crypto-js": "^4.0.0",
+    "tape-promise": "^4.0.0",
+    "typescript": "^4.3.2"
   }
 }
